# salpa

./: .gitignore  CMakeLists.txt  Makefile
.github/: get-build-requirements-linux
.github/workflows/: build-python-linux.yml  upload-wheel-linux.yml  wheels.py  wheels.yml
docs/: CMakeLists.txt
docs/source/: conf.py  index.rst  python.rst  pythonwrapper.rst
matlab/: CMakeLists.txt
matlab/salpa/private/: Makefile  salpamex.mex
python/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  salpa.py  setup.py
python/salpa/: LocalFit.cpp  LocalFit.h  __init__.py  msalpa.py  salpa_cppcore.cpp  salpapy.cpp
python/src/: LocalFit.os
python/src/salpa/: __init__.py
src/: CyclBuf.h  LocalFit.cpp  LocalFit.h  MedianVariance.h  NoiseLevels.h  SConscript  TQTest.cpp  Variance.h  posthoctasked.cpp  posthocthr2.cpp  salpa-altthread.cpp  salpa-nothread.cpp  salpa.cpp
test/: study200622.py
