[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salpa"
version = "1.0"
authors = [
  { name="Daniel A. Wagenaar", email="daw@caltech.edu" },
]
description = "Artifact removal for multichannel electrophysiology"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
"Homepage" = "https://github.com/wagenadl/salpa"

