[build-system]
requires = ["setuptools>=61.0",
            "pybind11>=2.10.0", ]
build-backend = "setuptools.build_meta"

[project]
name = "salpa"
version = "1.0"
authors = [
  { name="Daniel A. Wagenaar", email="daw@caltech.edu" },
]
description = "Artifact removal for multichannel electrophysiology"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
[tool.setuptools]
packages = ["salpa"]

[project.urls]
"Homepage" = "https://github.com/wagenadl/salpa"

